--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -3,9 +3,9 @@
 one:
   title: MyString
   content: MyString
-  complete_flag: false
+  Complete_flag: false
 
 two:
   title: MyString
   content: MyString
-  complete_flag: false
+  Complete_flag: false
