--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,12 @@ test:
 
 production:
   <<: *default
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
+  database: todolist_api_app_production
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
+ 
+ 
+  # adapter: postgresql
+  # encoding: unicode
+  # pool: 5
